--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,3 +1,3 @@
-<h1>Welcome to the Terms of Service Fairness Project.</h1>
+<h1 class="text-center">Welcome to the Terms of Service Fairness Project.</h1>
 
 <h3>A not-for-profit service created, operated, and presented by Break Diving, Inc.</h3>
