--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,3 +1,30 @@
-<h1 class="text-center">Welcome to the Terms of Service Fairness Project.</h1>
+<!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1 class="display-3">The Terms of Service Fairness Project</h1>
+        <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit that believes that in order for people to succeed in life, they should know exactly what they are signing on the internet.  We at TOSfairness are a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements.  No one reads them before joining a new website.  Well, until now.  Now, we read and rate them for you.  Awesome, right?  You're welcome.</p>
+        <p><a class="btn btn-primary btn-lg" role="button" href="#">Learn more »</a></p>
+      </div>
+    </div>
 
-<h3>A not-for-profit service created, operated, and presented by Break Diving, Inc.</h3>
+    <div class="container">
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" role="button" href="#">View details »</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-secondary" role="button" href="#">View details »</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-secondary" role="button" href="#">View details »</a></p>
+        </div>
+      </div>
+
+      <hr>
