--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,14 +28,17 @@
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+           <li class="nav-item active">
+            <a class="nav-link" href="#">Donate</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Volunteer</a>
+            <a class="nav-link" href="#">The Rating System</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Donate</a>
+            <a class="nav-link" href="#">Volunteer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" href="#">Break Diving</a>
