--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,9 +1,13 @@
+
+
 <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1 class="display-3">The Terms of Service Fairness Project</h1>
-        <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit that believes that in order for people to succeed in life, they should know exactly what they are signing on the internet.  We at TOSfairness are a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements.  No one reads them before joining a new website.  Well, until now.  Now, we read and rate them for you.  Awesome, right?  You're welcome.</p>
-        <p><a class="btn btn-primary btn-lg" role="button" href="#">Learn more »</a></p>
+        <h1 class="display-5">The Terms of Service Fairness Project</h1>
+        <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
+        <p>No one (and we mean NO ONE) reads every word of every agreement before joining a new website or agreeing to new terms of service.  Well, until now.  Now, we read and rate as many of them for you as we can, so you can feel safer signing them.  Awesome, right?  You're welcome.</p>
+        <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started</p>
+        <p><a class="btn btn-primary btn-sm" role="button" href="#">Learn more about us »</a></p>
       </div>
     </div>
 
@@ -11,18 +15,54 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>Top Ten Daily Fair</h2>
+          <p>Here are the top ten agreements for the day that we deem most transparent, fair, and reasonable, where we feel the company is genuinely concerned about you, the user or customer, your best interests, and your welfare.  We applaud them for leading the way!</p>
+            <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           <p><a class="btn btn-secondary" role="button" href="#">View details »</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h2>Our Online User Bill of Rights</h2>
+          <p>It's time we banded together as users and consumers and demanded to be treated better.  This is your online user bill of rights, brought to you by the volunteer attorneys at the TOS Fairness Project.</p>
+          <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           <p><a class="btn btn-secondary" role="button" href="/bill_of_rights.html">View details »</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <h2>Top Ten Daily Unfair</h2>
+          <p>Here are the top ten agreements for the day that we deem most unclear, most unfair, and unreasonable, where we feel the company is genuinely unconcerned about you, the user or customer, your best interests, and your welfare.  We urge them to stop trying to take advantage of their users.</p>
+          <ol>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ol>
           <p><a class="btn btn-secondary" role="button" href="#">View details »</a></p>
         </div>
       </div>
