--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -4,10 +4,14 @@
     <div class="jumbotron">
       <div class="container">
         <h1 class="display-5">The Terms of Service Fairness Project</h1>
-        <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
-        <p>No one (and we mean NO ONE) reads every word of every agreement before joining a new website or agreeing to new terms of service.  Well, until now.  Now, we read and rate as many of them for you as we can, so you can feel safer signing them.  Awesome, right?  You're welcome.</p>
-        <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started</p>
+        <p>Most online user agreements are stacked in favor of the corporation, and not in favor of the individual user.  We aim to change that, and keep it that way.  TOSfairness is a collective of volunteer attorneys and netizens focused on corporate transparency in murky 'click' agreements on the web, on phones, on games, and online.</p>
+        <p>No one (and we mean NO ONE) reads every word of every agreement before joining a new website or agreeing to new terms of service, whether on a computer, or on your phone.  Well, until now.  Now, we read and rate as many of them for you as we can, in order of demand, so you can feel safer signing them.  Awesome, right?  You're welcome.</p>
+        <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started!</p>
         <p><a class="btn btn-primary btn-sm" role="button" href="#">Learn more about us »</a></p>
+
+        <form class='text-center'>Company Name:<input type="text"></form> 
+        <p class='text-center'>OR</p>
+        <form class='text-center'>Website URL: www.<input type="text"></form>
       </div>
     </div>
 
