--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -2,3 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+body > .container {
+  /* Margin bottom by footer height */
+  padding-top: 60px;
+}
