--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -9,7 +9,7 @@
         <p>Brought to you by Break Diving, Inc. a 501(c)(3) not-for-profit with one primary mission: helping individuals succeed in life.  It follows that in order for people to succeed in life, they should know exactly what they are actually signing.  Right?  Let's get started!</p>
         <p><a class="btn btn-primary btn-sm" role="button" href="#">Learn more about us »</a></p>
 
-        <form class='text-center'>Company Name:<input type="text"></form> 
+        <form class='text-center'>Company Name:<input type="text"></form>
         <p class='text-center'>OR</p>
         <form class='text-center'>Website URL: www.<input type="text"></form>
       </div>
@@ -72,3 +72,4 @@
       </div>
 
       <hr>
+    </div>
