--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -2,7 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-body > .container {
-  /* Margin bottom by footer height */
-  padding-top: 60px;
+body, wrapper {
+  min-height: 100vh;
+}
+
+main {
+  flex:1;
 }
