--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -23,6 +23,12 @@
             <% end %>
           </div>
         </div>
+        <br />&nbsp;
+        <div class="row">
+          <div class="col-md-10">
+            <%= link_to "Request Service", new_contract_path, :class => 'btn btn-primary my-2 my-sm-0' %>
+          </div>
+        </div>
       </div>
     </div>
 
