--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -26,7 +26,7 @@
         <br />
         <div class="row">
           <div class="col-md-10">
-            <%= link_to "Request Service", new_contract_path, :class => 'btn btn-primary my-2 my-sm-0' %>
+            <%= link_to "New TOS Review Request", new_contract_path, :class => 'btn btn-primary my-2 my-sm-0' %>
           </div>
         </div>
       </div>
