Fixed some CSS and created the first draft of the bill of rights

--- a/app/views/websites/bill_of_rights.html.erb
+++ b/app/views/websites/bill_of_rights.html.erb
@@ -1,3 +1,59 @@
-<h1>The TOS Fairness Project Online User Bill of Rights</h1>
+<br><br>
 
-<p>Add the Bill of Rights here</p>
+<div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
+
+  <h1>The TOS Fairness Project Online User Bill of Rights</h1>
+  <h2>Draft Version 1.0</h2>
+
+  <p>Online users are the lifeblood of online companies.  Without me, the consumer, there would be no smartphones, no social media, no games, and no software.  Without me, the tech corporation dies.</p>
+
+  <p>Given this self-evident truth, it is reasonable to expect that these corporations (that survive because of people lieke me) will be honest, fair, transparent, reasonable, and LOVING of the user base that I (and others like me) collectively provide to them.</p>
+
+  <p>Therefore, I subscribe to and adopt this Online Bill of Rights as my own, and expect that those companies with whom I choose to do business will adhere to them to the best of their ability.  Those websites, apps, and companies that do not... will have their deviousness and disdain for me and other users publicly disclosed and scrutinized here on and through the Terms of Service Fairness Project.</p>
+
+  <p>All of the following items are used to rate company terms of service agreements.
+
+  <ol>
+    <li><b>The Right to Sue - 5 Points</b></li>
+      <p>The right to trial by jury is enshrined in the U.S. Constitution.  It is a right that I should be able to utilize, without question, and in a venue close to my home.</p>
+    <li><b>The Right to Low-Cost Arbitration - 5 Points</b></li>
+      <p>Sometimes, trial by jury is too expensive.  Therefore, I shall also have the right to use arbitration, and at all times, the corporation must pay the costs of the arbitration.  Never will I be expected to pay to enforce my rights.</p>
+    <li><b>The Right to a Class Action - 5 Points</b></li>
+      <p>While class actions often do not earn the individual class members much money, they do ensure that companies do not take advantage of an individual's hesitation to file a lawsuit on his own to force unfair terms upon a user like me.  I demand my right to join any class action.</p>
+    <li><b>The Right to Due Process - 5 Points</b></li>
+      <p>A company may not contract with me, and then arbitrarily kick me off or block my access to the service merely by citing a terms of service violation without any due process.  I am entitled to a warning, and also, an opportunity express myself to a decision maker of adequate status within the company before any action is taken against me or my account.  At no time may I be blocked, deleted, removed, or censored unless and until an online jury of unbiased peers makes an impartial decision based on all the facts.  A mere multiple flagging of my post without further investigation and an opportunity to be heard is not grounds for citing a terms of service violation and deleting my account.</p>
+    <li><b>The Right to No Hidden Terms or Fees - 5 Points</b></li>
+      <p>I expect and am entitled to see all of the major terms of the agreement up front, in the online sales materials.  I should not be sold one set of things, and discover later that I agreed to another set of things.</p>
+    <li><b>The Right to Defend Myself & Be Heard - 5 Points</b></li>
+      <p>Under no circumstances may any action be taken against me affecting my right to use the service (barring failure to pay) until I have been afforded an opportunity to explain my side of the story to an online jury of my peers.  Even if I fail to pay, proper notice must be provided to me at least one week prior to service being termined.  Under no circumstances may my access to the service be unilaterally turned off without prior warning of at least 72 hours.</p>
+    <li><b>The Right to Control My Intellectual Property - 5 Points</b></li>
+      <p>My original content must always remain my original content, unless independently negotiated otherwise.  I'm happy to give a company a perpetual non-exclusive license to use my intellectual property on the website, but only for the express purposes of my using the services offered.  Under no circumstances my my IP be used for other company means.</p>
+    <li><b>The Right to Freedom of Expression - 5 Points</b></li>
+      <p>I may say whatever I want, whenever I want, unless my action directly encourages harm or self-harm to another person, or is considered foul language in a family-friendly environment.  The mere fact that someone disagrees with my opinion is not to ever be grounds for censorship or removal of my posts, or deletion or blocking of my account.  If I can say something in person, and not be censored or arrested, then that right remains for me online as well.</p>
+    <li><b>The Right to Privacy - 5 Points</b></li>
+      <p>The amount of private information that I am forced to give up in order to use an online service has become rapacious.  My private information may NEVER be sold to another company.  EVER.  If people want to advertise on your service, that's fine, but I expect that my private data will remain private, and no one outside your company will ever have access to any identifying data about me.  If you are required to share information about me with law enforcement, I expect to be notified that a disclosure to law enforcement was made, and what exactly was shared.
+    <li><b>The Right to Reasonable Terms - 5 Points</b></li>
+      <p>It is because of me that you make money, whether $10 or $10 billion.  The very least you can do is offer to me fair terms that treat me as a valuable member of society, and indeed, the very lifeblood of your success.  Treat me fairly, and I will potentially remain a customer for life.  Treat me unfairly, and we will do all we can to ensure you do not do so to other consumers.</p>
+  </ol>
+
+  <p>That's an initial total of 50 points based on the contract itself.  Additional points are granted in general as follows based on that or prior related Terms of Service agreements:</p>
+
+  <ul>
+    <li><b>Historical Fairness - 10 Points</b></li>
+      <p>Have previous iterations of this Terms of Service been fair over the last 5 years?</p>
+    <li><b>Historical User Ratings - 10 Points</b></li>
+      <p>Have users had good experiences with this product or service's terms of service over the last 5 years?</p>
+    <li><b>Historical Lack of Lawsuits or Arbitrations - 10 Points</b></li>
+      <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?</p>
+    <li><b>Historical Transparency Rating - 10 Points</b></li>
+      <p>Have prior iterations of this terms of service over the last 5 years been fair?</p>
+    <li><b>Double Public Placement of TOS Rating Badge - 10 points</b></li>
+      <p>Does the company place their TOS Rating Badge and score prominently and publicly on their index.html page, and on the actual Terms of Service signature page, directly next to the 'clickbox'?</p> 
+  </ul>
+
+  <p>Together, this comes to 100.  Each contract terms of service will have a rating, from 0 - 100, in order to help preserve my rights.</p>
+
+  <p>Companies that follow and adhere to this bill of rights, and treat customers fairly and with respect, will come closest to earning the coveted, but rarely earned, 100.</p>
+
+
+</div>
