--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -74,7 +74,7 @@
               <% end %>
             <% end %>
           </ol>
-          <p><a class="btn btn-secondary" role="button" href="#">View details »</a></p>
+          <p><a class="btn btn-secondary" role="button" href="/top_ten_unfair">View details »</a></p>
         </div>
       </div>
 
