--- a/app/views/websites/top_ten_unfair.html.erb
+++ b/app/views/websites/top_ten_unfair.html.erb
@@ -1,1 +1,6 @@
-<h1>Top Ten UnFair Contracts</h1>
+<br><br>
+<div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
+
+  <h1>Daily Top Ten UnFair Contracts</h1>
+
+</div>
