Updated bill of rights

--- a/app/views/websites/bill_of_rights.html.erb
+++ b/app/views/websites/bill_of_rights.html.erb
@@ -2,8 +2,9 @@
 
 <div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
 
-  <h1>The TOS Fairness Project Online User Bill of Rights</h1>
-  <h2>Draft Version 1.0</h2>
+  <h3>The TOS Fairness Project</h3>
+  <h1>Online User Bill of Rights</h1>
+  <h4>Draft Version 1.0 by Monroe Mann, Esq.</h4>
 
   <p>Online users are the lifeblood of online companies.  Without me, the consumer, there would be no smartphones, no social media, no games, and no software.  Without me, the tech corporation dies.</p>
 
