--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,18 +30,18 @@
           <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">The Rating System</a>
+                <a class="nav-link" href="/rating_system">The Rating System</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Volunteer</a>
+                <a class="nav-link" href="/volunteer">Volunteer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Donate</a>
+                <a class="nav-link" href="/donate">Donate</a>
               </li>
-                <a class="nav-link disabled" href="#">Break Diving</a>
+                <a class="nav-link disabled" href="/break_diving">Break Diving</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="dropdown01" aria-expanded="false" aria-haspopup="true" href="http://example.com" data-toggle="dropdown">Dropdown</a>
