Added and adjusted many pages

--- a/app/views/websites/about.html.erb
+++ b/app/views/websites/about.html.erb
@@ -11,8 +11,10 @@
 
   <p>So, instead of trying to use the legal system to fight these battles from the outside, Break Diving founder Dr. Monroe Mann, PhD, Esq, MBA, LLM, ME decided to fight these companies from the inside by creating the TOS Fairness Project: by using peer pressure and public awareness, our intent is to encourage companies to voluntarily update their terms of services to be more in favor of the consumer.  Those that don't, we hope, will lose business and good will to those companies that adhere to our online user bill of rights.</p>
 
-  <p>Our rating system combines the tireless work of hundreds of volunteer attorneys from around the world, as well as the candid feedback from actual users who interact with the terms of services in question every day.</p>
+  <p>Our ratings result from the tireless work of hundreds of volunteer & paid attorneys from around the world, as well as the candid feedback from actual users who interact with the terms of services in question every day.</p>
 
   <p>Thanks for visiting us, and please, spread the word.  The more people who know to come to TOSFairness prior to clicking "I agree", the better off the world will be!</p>
+
+  <p>NOTE: We are not a for-profit company.  All donations to Break Diving, Inc. will help to further the reach of our website, help to bring on additional staff, and ensure that the ideals of transparency espoused on this website are spread throughout the world.</p> 
 
 </div>
