--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -3,4 +3,42 @@
 
   <h1>Our Rating System</h1>
 
+  <p>Each contract terms of service will have a rating, from 0 - 100, in order to help preserve each users bill of rights, and to provide each user with a clear idea of what they are signing.</p>
+
+  <p>Each agreement is first rated on a 0 - 50 scale, using the following criteria from our online user <a href="/bill_of_rights.html">bill of rights</a>.  
+
+  <ol>
+    <li><b>The Right to Sue</b> - 5 Points</li>
+    <li><b>The Right to Low-Cost Arbitration</b> - 5 Points</li>
+    <li><b>The Right to a Class Action</b> - 5 Points</li>   
+    <li><b>The Right to Due Process</b> - 5 Points</li>
+    <li><b>The Right to No Hidden Terms or Fees</b> - 5 Points</li>
+    <li><b>The Right to Defend Myself & Be Heard</b> - 5 Points</li>
+    <li><b>The Right to Control My Intellectual Property</b> - 5 Points</li>
+    <li><b>The Right to Freedom of Expression</b> - 5 Points</li>
+    <li><b>The Right to Privacy</b> - 5 Points</li>
+    <li><b>The Right to Reasonable Terms</b> - 5 Points</li>
+  </ol>
+
+  <p>This initial bill of rights (explained in depth on the <a href="/bill_of_rights.html">bill of rights</a> page) provides an initial potential total of 50 points based on the contract itself.  Additional points are granted in general as follows based on all prior related Terms of Service agreements:</p>
+
+  <ul>
+    <li><b>Historical Fairness</b> - 10 Points</li>
+      <p>Have previous iterations of this Terms of Service been fair over the last 5 years?</p>
+    <li><b>Historical User Ratings</b> - 10 Points</li>
+      <p>Have users had good experiences with this product or service's terms of service over the last 5 years?</p>
+    <li><b>Historical Lack of Lawsuits or Arbitrations</b> - 10 Points</li>
+      <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?</p>
+    <li><b>Historical Transparency Rating</b> - 10 Points</li>
+      <p>Have prior iterations of this terms of service over the last 5 years been fair?</p>
+    <li><b>Double Public Placement of TOS Rating Badge</b> - 10 points</li>
+      <p>Does the company place their TOS Rating Badge and score prominently and publicly on the bottom right of their index.html page, and on the actual Terms of Service signature page, directly next to the 'clickbox'?</p> 
+  </ul>
+
+  <p>Together, this comes to 100.</p>
+
+  <p>Companies that follow and adhere to the bill of rights, and treat customers fairly and with respect, will come closest to earning the coveted, but rarely earned, 100.</p>
+
+  <p>Each day, the top ten fair online contracts and top ten unfair online contracts will be publicly displayed on the TOSFairness.org homepage--as both a badge of honor to those who are at the top, and an embarrassing outing of those companies who disrespect their customers.</p>
+
 </div>
