--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
                 <a class="nav-link" href="/about">About <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/bill_of_rights">Bill of Rights</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/rating_system">The Rating System</a>
               </li>
               <li class="nav-item">
@@ -42,14 +45,6 @@
                 <a class="nav-link" href="/donate">Donate</a>
               </li>
                 <a class="nav-link disabled" href="/break_diving">Break Diving</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="dropdown01" aria-expanded="false" aria-haspopup="true" href="http://example.com" data-toggle="dropdown">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
               </li>
             </ul>
             <ul class="navbar-nav justify-content-end">
