--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -2,82 +2,92 @@
   <%= form_for @contract do |f| %>
     <div class="form-group row">
       <%= f.label :company_name, "Company", :class => "col-2 col-form-label" %>
-      <div class="col-10">
+      <div class="col-7">
         <%= f.text_field :company_name, :class => "form-control", :placeholder => "Enter Company Name" %>
       </div>
     </div>
     <div class="form-group row">
       <%= f.label :website, "Website", :class => "col-2 col-form-label" %>
-      <div class="col-10">
+      <div class="col-7">
         <%= f.text_field :website, :class => "form-control", :placeholder => "Enter URL" %>
       </div>
     </div>
     <div class="form-group row">
       <%= f.label :contract_title, "Title", :class => "col-2 col-form-label" %>
-      <div class="col-10">
+      <div class="col-7">
         <%= f.text_field :contract_title, :class => "form-control", :placeholder => "Enter Contract Title" %>
       </div>
     </div>
     <div class="form-group row">
       <%= f.label :contract_date, "Date", :class => "col-2 col-form-label" %>
-      <div class="col-10">
+      <div class="col-7">
         <%= f.text_field :contract_date, :class => "form-control", :placeholder => "Enter Contract Date" %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_1, "Rating 1", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_1, :class => "form-control", :placeholder => "Enter Rating 1" %>
-      </div>
-      <%= f.label :rating_2, "Rating 2", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_2, :class => "form-control", :placeholder => "Enter Rating 2" %>
+      <%= f.label :rating_1, "The Right to Sue", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_1, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_3, "Rating 3", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_3, :class => "form-control", :placeholder => "Enter Rating 3" %>
-      </div>
-      <%= f.label :rating_4, "Rating 4", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_4, :class => "form-control", :placeholder => "Enter Rating 4" %>
+      <%= f.label :rating_2, "The Right to Low-Cost Arbitration", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_2, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_5, "Rating 5", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_5, :class => "form-control", :placeholder => "Enter Rating 5" %>
-      </div>
-      <%= f.label :rating_6, "Rating 6", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_6, :class => "form-control", :placeholder => "Enter Rating 6" %>
+      <%= f.label :rating_3, "The Right to a Class Action", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_3, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_7, "Rating 7", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_7, :class => "form-control", :placeholder => "Enter Rating 7" %>
-      </div>
-      <%= f.label :rating_8, "Rating 8", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_8, :class => "form-control", :placeholder => "Enter Rating 8" %>
+      <%= f.label :rating_4, "The Right to Due Process", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_4, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_9, "Rating 9", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_9, :class => "form-control", :placeholder => "Enter Rating 9" %>
+      <%= f.label :rating_5, "The Right to No Hidden Terms or Fees", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_5, :class => "form-control" %>
       </div>
-      <%= f.label :rating_10, "Rating 10", :class => "col-2 col-form-label" %>
-      <div class="col-4">
-        <%= f.text_field :rating_10, :class => "form-control", :placeholder => "Enter Rating 10" %>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_6, "The Right to Defend Myself & Be Heard", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_6, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_7, "The Right to Control My Intellectual Property", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_7, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_8, "The Right to Freedom of Expression", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_8, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_9, "The Right to Privacy", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_9, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_10, "The Right to Reasonable Terms", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_10, :class => "form-control" %>
       </div>
     </div>
     <div class="form-group row">
       <%= f.label :description, "Description", :class => "col-2 col-form-label" %>
-      <div class="col-10">
-        <%= f.text_field :description, :class => "form-control", :placeholder => "Enter Description" %>
+      <div class="col-7">
+        <%= f.text_area :description, :class => "form-control", :placeholder => "Enter Description", :row => 3 %>
       </div>
     </div>
     <%= f.submit "Save", :class => "btn btn-primary" %>
