--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,10 @@
               <li class="nav-item">
                 <a class="nav-link" href="/donate">Donate</a>
               </li>
+              <li class="nav-item">
+                <%= link_to "Contracts", contracts_path, :class => "nav-link" %>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link disabled" href="/break_diving">Break Diving</a>
               </li>
             </ul>
