--- a/app/views/websites/_contracts.html.erb
+++ b/app/views/websites/_contracts.html.erb
@@ -1,10 +1,9 @@
 <tr>
-  <td><%= item.company_name %></td>
-  <td><%= item.website %></td>
+  <td><%= item.contract_title %></td>
   <td><%= item.total_rating %></td>
-  <td><%= link_to 'View', contract_path(item) %>
+  <td><%= link_to 'View', company_contract_path(item.company_id, item) %>
   <% if user_signed_in? && current_user.admin? %>
-    <%= link_to 'Edit', edit_contract_path(item) %>
+    <%= link_to 'Edit', edit_company_contract_path(item.company_id,item) %>
   <% end %>
   </td>
 </tr>
