--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -1,7 +1,8 @@
-<%= form_for contract do |f| %>
+<div class="container pt-5 col-md-8">
+  <%= form_for ([@company,@contract]) do |f| %>
   <% if contract.errors.any? %>
     <div class="alert alert-danger" role="alert">
-      <h3><%= pluralize(contract.errors.count, "error") %> prohibited this company from being saved:</h3>
+      <h3><%= pluralize(contract.errors.count, "error") %> prohibited this contract from being saved:</h3>
       <ul>
         <% contract.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
@@ -9,13 +10,120 @@
       </ul>
     </div>
   <% end %>
-  <div class="form-group">
-    <%= f.label :company_name, "Company Name" %>
-    <%= f.text_field :company_name, :class => "form-control", :placeholder => "Enter Company Name" %>
-  </div>
-  <div class="form-group">
-    <%= f.label :website, "Website" %>
-    <%= f.text_field :website, :class => "form-control", :placeholder => "Enter URL" %>
-  </div>
-  <%= f.submit "Add", :class => "btn btn-primary" %>
-<% end %>
+    <div class="form-group row">
+      <%= f.label :contract_title, "Title", :class => "col-2 col-form-label" %>
+      <div class="col-7">
+        <%= f.text_field :contract_title, :class => "form-control", :placeholder => "Enter Contract Title" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :contract_date, "Date", :class => "col-2 col-form-label" %>
+      <div class="col-7">
+        <%= f.text_field :contract_date, data:{ provide:'datepicker' }, :class => "form-control", :placeholder => "Enter Contract Date" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :contract_type, "Type", :class => "col-2 col-form-label" %>
+      <div class="col-7">
+        <%= f.select(:contract_type, Contract::TYPES, {prompt: '-select-'},{class: 'form-control'}) %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_1, "The Right to Sue", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_1, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_2, "The Right to Low-Cost Arbitration", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_2, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_3, "The Right to a Class Action", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_3, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_4, "The Right to Due Process", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_4, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_5, "The Right to No Hidden Terms or Fees", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_5, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_6, "The Right to Defend Myself & Be Heard", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_6, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_7, "The Right to Control My Intellectual Property", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_7, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_8, "The Right to Freedom of Expression", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_8, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_9, "The Right to Privacy", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_9, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_10, "The Right to Reasonable Terms", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_10, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_11, "Historical Fairness", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_11, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_12, "Historical User Ratings", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_12, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_13, "Historical Lack of Lawsuits or Arbitrations", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_13, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_14, "Historical Transparency Rating", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_14, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :rating_15, "Double Public Placement of TOS Rating Badge", :class => "col-6 col-form-label" %>
+      <div class="col-3">
+        <%= f.text_field :rating_15, :class => "form-control" %>
+      </div>
+    </div>
+    <div class="form-group row">
+      <%= f.label :description, "Description", :class => "col-2 col-form-label" %>
+      <div class="col-7">
+        <%= f.text_area :description, :class => "form-control", :placeholder => "Enter Description", :row => 3 %>
+      </div>
+    </div>
+    <%= f.submit "Save", :class => "btn btn-primary" %>
+  <% end %>
+</div>
