--- a/app/views/contracts/edit.html.erb
+++ b/app/views/contracts/edit.html.erb
@@ -1,95 +1,4 @@
-<div class="container pt-5 col-md-8">
-  <%= form_for @contract do |f| %>
-    <div class="form-group row">
-      <%= f.label :company_name, "Company", :class => "col-2 col-form-label" %>
-      <div class="col-7">
-        <%= f.text_field :company_name, :class => "form-control", :placeholder => "Enter Company Name" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :website, "Website", :class => "col-2 col-form-label" %>
-      <div class="col-7">
-        <%= f.text_field :website, :class => "form-control", :placeholder => "Enter URL" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :contract_title, "Title", :class => "col-2 col-form-label" %>
-      <div class="col-7">
-        <%= f.text_field :contract_title, :class => "form-control", :placeholder => "Enter Contract Title" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :contract_date, "Date", :class => "col-2 col-form-label" %>
-      <div class="col-7">
-        <%= f.text_field :contract_date, :class => "form-control", :placeholder => "Enter Contract Date" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_1, "The Right to Sue", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_1, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_2, "The Right to Low-Cost Arbitration", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_2, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_3, "The Right to a Class Action", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_3, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_4, "The Right to Due Process", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_4, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_5, "The Right to No Hidden Terms or Fees", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_5, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_6, "The Right to Defend Myself & Be Heard", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_6, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_7, "The Right to Control My Intellectual Property", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_7, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_8, "The Right to Freedom of Expression", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_8, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_9, "The Right to Privacy", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_9, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :rating_10, "The Right to Reasonable Terms", :class => "col-6 col-form-label" %>
-      <div class="col-3">
-        <%= f.text_field :rating_10, :class => "form-control" %>
-      </div>
-    </div>
-    <div class="form-group row">
-      <%= f.label :description, "Description", :class => "col-2 col-form-label" %>
-      <div class="col-7">
-        <%= f.text_area :description, :class => "form-control", :placeholder => "Enter Description", :row => 3 %>
-      </div>
-    </div>
-    <%= f.submit "Save", :class => "btn btn-primary" %>
-  <% end %>
+<div class="container pt-5">
+  <h2>Contract for <%= @company.company_name %></h2>
+    <%= render partial: 'form', locals: {company: @company, contract: @contract} %>
 </div>
