--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container pt-5">
-  <h2>Add Company</h2>
-  <%= render 'form', contract: @contract %>
+  <h2>Contract for <%= @company.company_name %></h2>
+    <%= render partial: 'form', locals: {company: @company, contract: @contract} %>
 </div>
