--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="/donate">Donate</a>
               </li>
               <li class="nav-item">
-                <%= link_to "Contracts", contracts_path, :class => "nav-link" %>
+                <%= link_to "Contracts", companies_path, :class => "nav-link" %>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="/break_diving">Break Diving</a>
