--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -11,10 +11,10 @@
 
         <div class="row">
           <div class="col-md-10">
-            <%= form_tag contracts_path, :method => 'get', :class => 'my-2 my-lg-0 pull-left' do %>
+            <%= form_tag companies_path, :method => 'get', :class => 'my-2 my-lg-0 pull-left' do %>
                 <div class="form-row">
                   <div class="col-md-6">
-                    <%= autocomplete_field_tag 'search', '', autocomplete_contract_company_name_contracts_path, :class => 'form-control mr-sm-2', placeholder: "Enter Company Name or URL"  %>
+                    <%= autocomplete_field_tag 'search', '', autocomplete_company_company_name_companies_path, :class => 'form-control mr-sm-2', placeholder: "Enter Company Name or URL"  %>
                   </div>
                   <div class="col-md-3">
                     <%= submit_tag 'Search Company', :class => 'btn btn-outline-info my-2 my-sm-0'%>
@@ -26,7 +26,7 @@
         <br />
         <div class="row">
           <div class="col-md-10">
-            <%= link_to "New TOS Review Request", new_contract_path, :class => 'btn btn-primary my-2 my-sm-0' %>
+            <%= link_to "New TOS Review Request", new_company_path, :class => 'btn btn-primary my-2 my-sm-0' %>
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
             <ol>
               <% if !@top_ten_fairs.nil? %>
                 <% @top_ten_fairs.each do |c| %>
-                  <li><%= c.company_name %></li>
+                  <li><%= c.contract_title %></li>
                 <% end %>
               <% end %>
             </ol>
@@ -70,7 +70,7 @@
           <ol>
             <% if !@top_ten_unfairs.nil? %>
               <% @top_ten_unfairs.each do |c| %>
-                <li><%= c.company_name %></li>
+                <li><%= c.contract_title %></li>
               <% end %>
             <% end %>
           </ol>
