--- a/app/views/websites/top_ten_unfair.html.erb
+++ b/app/views/websites/top_ten_unfair.html.erb
@@ -7,8 +7,7 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">Company Name</th>
-              <th scope="col">Website</th>
+              <th scope="col">Contract Title</th>
               <th scope="col">Total Rating</th>
               <th scope="col"></th>
             </tr>
