Updated Rating System

--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -29,10 +29,8 @@
       <p>Have users had good experiences with this product or service's terms of service over the last 5 years?</p>
     <li><b>Historical Lack of Lawsuits or Arbitrations</b> - 10 Points</li>
       <p>Has the company had very few consumer initiated lawsuits or arbitrations over the last 5 years arising out of this or prior iterations of this terms of service?</p>
-    <li><b>Historical Transparency Rating</b> - 10 Points</li>
-      <p>Have prior iterations of this terms of service over the last 5 years been fair?</p>
-    <li><b>Double Public Placement of TOS Rating Badge</b> - 10 points</li>
-      <p>Does the company place their TOS Rating Badge and score prominently and publicly on the bottom right of their index.html page, and on the actual Terms of Service signature page, directly next to the 'clickbox'?</p>
+    <li><b>Public Placement of TOS Rating Badge</b> - 20 points</li>
+      <p>Does the company place their TOS Rating Badge and score prominently and publicly on the actual Terms of Service signature page, directly next to the 'clickbox'?</p>
   </ul>
 
   <p>Together, this comes to 100.</p>
